fix shift swap avatar bg color

--- a/grafana-plugin/src/containers/ScheduleSlot/ScheduleSlot.module.css
+++ b/grafana-plugin/src/containers/ScheduleSlot/ScheduleSlot.module.css
@@ -42,7 +42,7 @@
 .no-user {
   width: 12px;
   height: 12px;
-  background: #464c54;
+  background: var(--tag-background-primary);
   border-radius: 50%;
   display: flex;
   justify-content: center;
